# johanyim.com

backend/: Cargo.toml  build.rs  deploy
backend/src/: error.rs  main.rs  prelude.rs  state.rs
cv/: cv.typ  cv.yaml
frontend/: deploy  package-lock.json  vite.config.ts
frontend/src/lib/components/molecules/: ContactForm.svelte
frontend/src/lib/components/organisms/: Timeline.svelte
frontend/src/lib/notes/: aws-ec2.md
frontend/src/routes/: +error.svelte  +layout.svelte
frontend/src/routes/cv/: +page.svelte
frontend/src/routes/thanks/: +page.svelte
